2002-06-02  Alexander Malmberg  <alexander@malmberg.org>

	Add basic color picker bundles: the wheel color picker and the
	standard rgb/hsb/cmyk/gray picker.
	* GNUmakefile: Add ColorPickers subproject.
	* ColorPickers/: New files.

Sun May 26 13:46:58 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSMatrix.m
	([-_privateFrame:mode:numberOfRows:numberOfColumns:]): Do not make
	the cell size integers.  Any approximation is a loss of
	information, and by approximating without reason at this stage we
	are downgrading the information we pass to the backend -
	information which the backend can use to render better.  A longer
	explanation of why this change is appropriate in the source code.
	([-_rebuildLayoutAfterResizing]): New method with code taken from
	-resizeWithOldSuperviewSize:; rewritten not to compute changes
	incrementally, and not to round up sizes without reason.
	([-setFrame:], [-setFrameSize:]): New methods.
	([-resizeWithOldSuperviewSize:]): Removed.

2002-05-17  Georg Fleischmann <georg@vhf.de>

	* gui/Source/GSSimpleLayoutManager.m
	([-lineLayoutIndexForPoint:]): cast the count of
	_lineLayoutInformation to integer in MAX().  test if max is zero.
	([-glyphRangeForLineLayoutRange:]): test if count of
	_lineLayoutInformation is zero.
	([-drawLinesInLineRange:]): test if count of
	_lineLayoutInformation is zero (Modification by Nicola).
	
Wed May 22 13:02:02 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/Functions.m (NSHighlightRect): Do not flush the window.
	* Source/NSSplitView.m ([-mouseDown:]): Replace manual calls to PS
	composite operators with NSHighlightRect; manually flush the
	window after highlighting the appropriate rects.
	* Source/NSTableHeaderView.m: Everywhere, added a flush window
	after each call to NSHighlightRect.
	
Tue May 21 16:54:20 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBrowser.m ([-setPath:]): Fixed bug - column variable
	which was declared unsigned instead of int (Patch by Andreas Bohne