@@ -1,3 +1,8 @@
+2002-06-03  Adam Fedor  <fedor@gnu.org>
+
+	* Source/GSDisplayServer.m (-beep): New method.
+	* Source/NSGraphicsContext.m (-NSBeep): Use it.
+
 2002-06-02  Alexander Malmberg  <alexander@malmberg.org>
 
 	Add basic color picker bundles: the wheel color picker and the
